# DollyEngine

./: .travis.yml  CMakeLists.txt  README.md
scripts/: build.sh  dependencies_linux.sh  dependencies_osx.sh
src/: .travis.yml  CMakeLists.txt  main.cpp
test/: CMakeLists.txt
